Temp commit before update